# proto_1_server

./: README.md  launch.sh  pyproject.toml  server.py
libs/: extractor.py  hotswap_model_manager.py  milvus_memory_manager.py  typogen.py
